--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,19 +4,19 @@
 
 @font-face {
     font-family: 'Jost';
-    src: url('../../public/assets/fonts/jost.regular.ttf') format('truetype');
+    src: url('./assets/fonts/jost.regular.ttf') format('truetype');
     font-weight: 400;
 }
   
 @font-face {
     font-family: 'Jost';
-    src: url('../../public/assets/fonts/jost.medium.ttf') format('truetype');
+    src: url('./assets/fonts/jost.medium.ttf') format('truetype');
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'Jost';
-    src: url('../../public/assets/fonts/jost.semibold.ttf') format('truetype');
+    src: url('./assets/fonts/jost.semibold.ttf') format('truetype');
     font-weight: 600;
 }
 
@@ -116,11 +116,11 @@ body {
     height: 594px;
     width: 1006px;
     z-index: -1;
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-leaf.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-leaf.svg);
 }
 
 #hero-container {
-    background-image: url(../../public/assets/home/desktop/bg-pattern-hero-home.svg);
+    background-image: url(./assets/home/desktop/bg-pattern-hero-home.svg);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -134,7 +134,7 @@ body {
 }
 
 .hero-container::after {
-    content: url(../../public/assets/home/desktop/bg-pattern-hero-home.svg);
+    content: url(./public/assets/home/desktop/bg-pattern-hero-home.svg);
     position: absolute; 
     top: 0px;
 }
@@ -148,15 +148,15 @@ body {
 }
 
 #web-design-projects {
-    background-image: url(../../public/assets/home/desktop/image-web-design-large.jpg);
+    background-image: url(./assets/home/desktop/image-web-design-large.jpg);
 }
 
 #app-design-projects {
-    background-image: url(../../public/assets/home/desktop/image-app-design.jpg);
+    background-image: url(./assets/home/desktop/image-app-design.jpg);
 }
 
 #graphic-design-projects {
-    background-image: url(../../public/assets/home/desktop/image-graphic-design.jpg);
+    background-image: url(./assets/home/desktop/image-graphic-design.jpg);
 }
 
 .view-projects:after {    
@@ -188,7 +188,7 @@ body {
     width: 1006px;
     z-index: -1;
     transform: scale(-1);
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-leaf.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-leaf.svg);
 }
 
 .wider-letter-spacing {
@@ -200,17 +200,17 @@ body {
 }
 
 .rotation-passionate-background {
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-small-circle.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-small-circle.svg);
     transform: scaleX(-1) rotate(90deg);
 }
 
 .rotation-resourceful-background {
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-small-circle.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-small-circle.svg);
     transform: rotate(180deg);
 }
 
 .rotation-friendly-background {
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-small-circle.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-small-circle.svg);
 }
 
 .chevauchement-contact {
@@ -284,5 +284,5 @@ input:focus, textarea:focus {
     left: unset;
     width: 20px;
     height: 20px;
-    background-image: url(../../public/assets/contact/desktop/icon-error.svg);
+    background-image: url(./assets/contact/desktop/icon-error.svg);
 }
