--- a/public/styles.css
+++ b/public/styles.css
@@ -630,6 +630,10 @@ video {
   margin-bottom: 6rem;
 }
 
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -674,12 +678,24 @@ video {
   height: 3.5rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
 .h-72 {
   height: 18rem;
+}
+
+.h-80 {
+  height: 20rem;
 }
 
 .h-96 {
@@ -724,6 +740,10 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize-none {
@@ -810,6 +830,16 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -844,6 +874,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-20 {
@@ -1072,6 +1106,10 @@ input:focus, input:active, textarea:focus, textarea:active{
   color: var(--dark-gray);
 }
 
+.bg-color-light-gray {
+  background-color: var(--light-gray);
+}
+
 .color-light-gray {
   color: var(--light-gray);
 }
@@ -1146,14 +1184,17 @@ body {
 
 #web-design-projects {
   background-image: url(./assets/home/desktop/image-web-design-large.jpg);
+  background-size: cover;
 }
 
 #app-design-projects {
   background-image: url(./assets/home/desktop/image-app-design.jpg);
+  background-size: cover;
 }
 
 #graphic-design-projects {
   background-image: url(./assets/home/desktop/image-graphic-design.jpg);
+  background-size: cover;
 }
 
 .view-projects:after {
@@ -1222,6 +1263,10 @@ body {
   bottom: -35rem;
 }
 
+.chevauchement-web-design {
+  bottom: -78rem;
+}
+
 .nav-items-white:after {
   bottom: 0;
   content: "";
@@ -1282,6 +1327,19 @@ input:focus, textarea:focus {
   width: 20px;
   height: 20px;
   background-image: url(./assets/contact/desktop/icon-error.svg);
+}
+
+.project h2 {
+  color: var(--peach);
+}
+
+.project:hover {
+  background-color: var(--peach);
+  color: white !important;
+}
+
+.project:hover h2 {
+  color: white;
 }
 
 .placeholder\:text-base::-moz-placeholder {
