--- a/public/styles.css
+++ b/public/styles.css
@@ -871,6 +871,14 @@ video {
   background-size: cover;
 }
 
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-auto {
+  background-size: auto;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1189,12 +1197,10 @@ body {
 
 #app-design-projects {
   background-image: url(./assets/home/desktop/image-app-design.jpg);
-  background-size: cover;
 }
 
 #graphic-design-projects {
   background-image: url(./assets/home/desktop/image-graphic-design.jpg);
-  background-size: cover;
 }
 
 .view-projects:after {
