Some fixes and design

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -234,6 +234,10 @@ body {
     bottom: -90rem;
 }
 
+.chevauchement-graphic-design {
+    bottom: -58rem;
+}
+
 .nav-items-white:after {    
     bottom: 0;
     content: "";
@@ -315,6 +319,12 @@ input:focus, textarea:focus {
     background-position: right;
 }
 
+#web-design-container, #app-design-container, #graphic-design-container {
+    background-image: url(./assets/shared/desktop/bg-pattern-call-to-action.svg) !important;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
 #contact-us-container {
     background-image: url(./assets/about/desktop/bg-pattern-hero-about-desktop.svg);
     background-repeat: no-repeat;
@@ -327,7 +337,19 @@ input:focus, textarea:focus {
 }
 
 .single-location-container {
-    background-image: url(../../public/assets/shared/desktop/bg-pattern-two-circles.svg);
+    background-image: url(./assets/shared/desktop/bg-pattern-two-circles.svg);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+}
+
+#world-class-container{
+    background-image: url(./assets/shared/desktop/bg-pattern-two-circles.svg);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+#real-deal-container {
+    background-image: url(./assets/shared/desktop/bg-pattern-two-circles.svg);
     background-repeat: no-repeat;
     background-position: bottom left;
 }
